PLT-4460 Fix disappearing topbar when jumping from right sidebar (#4339)

--- a/webapp/sass/layout/_sidebar-left.scss
+++ b/webapp/sass/layout/_sidebar-left.scss
@@ -4,7 +4,7 @@
     border-right: $border-gray;
     height: 100%;
     left: 0;
-    position: absolute;
+    position: fixed;
     width: 220px;
     z-index: 5;
 
